# project_3_docpilot

./: .gitignore  Project3_Proposal_DocPilot.tex  README.md  Task1.tex  a.md  docker-compose.yml  idea.md
backend/: benchmark_results.json  pyproject.toml  scratch_backfill.py  scratch_benchmark.py  scratch_check_db.py  scratch_list_models.py  scratch_litellm.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/routes/: __init__.py  documents.py  edits.py  health.py  qa.py  synthesis.py
backend/app/core/: __init__.py  abstractions.py  models.py
backend/app/core/adapters/: __init__.py
backend/app/core/strategies/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/persistence/: __init__.py
backend/app/services/: __init__.py  agent_orchestrator.py  agent_strategies.py  document_store.py  edit_manager.py  ingest_service.py  model_gateway.py  rag_engine.py
backend/docpilot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: phase2_smoke_test.py
docs/: context_budgeting.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
report/: arch4.md
report/Task1/: Task1.tex
report/Task2/: adrs.md
report/Task3/: Task 3.tex  diag1_strategy.tex  diag2_cor.tex  diag3_command_memento.tex
report/Task4/: arch_analysis.md
