[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docpilot-backend"
version = "0.1.0"
description = "DocPilot backend API"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "litellm>=1.83,<2.0",
  "python-multipart>=0.0.9",
  "docling>=0.5.0",
  "sqlalchemy>=2.0,<3.0",
  "psycopg[binary]>=3.1,<4.0",
  "alembic>=1.13,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["app*"]
